--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
 		"obsidian": "latest",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4"
+	},
+	"dependencies": {
+		"@types/sql.js": "^1.4.9",
+		"sql.js": "^1.13.0"
 	}
 }
