--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^22.15.15",
+		"@types/sql.js": "^1.4.9",
 		"@typescript-eslint/eslint-plugin": "8.32.0",
 		"@typescript-eslint/parser": "8.32.0",
 		"builtin-modules": "5.0.0",
@@ -20,7 +21,7 @@
 		"obsidian": "latest",
 		"tslib": "2.8.1",
 		"typescript": "5.8.3",
-		"@types/sql.js": "^1.4.9"
+		"base-64": "^1.0.0"
 	},
 	"dependencies": {
 		"fuse.js": "^7.1.0",
