--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
 	"name": "obsidian-finances",
-	"version": "0.1.0",
+	"version": "0.1.1",
 	"description": "A simple financial tracker for Obsidian.",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
-		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-		"version": "node version-bump.mjs && git add manifest.json versions.json"
+		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production"
 	},
 	"keywords": [],
 	"author": "",
