--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
 	"id": "obsidian-finances",
 	"name": "Finances",
-	"version": "0.1.5",
+	"version": "0.2.0",
 	"minAppVersion": "0.15.0",
-	"description": "A simple financial tracker for Obsidian.",
-	"author": "damnvalium",
+	"description": "A simple finances management solution for Obsidian.",
+	"author": "43ntropy",
 	"authorUrl": "",
 	"fundingUrl": "",
 	"isDesktopOnly": false
